syntax = "proto3";

package proto;

import "options.proto";

option go_package = "proto/pb";

service GateSer {
    rpc SendToCli(SendToCli.Req) returns (SendToCli.Rsp);
}

message AuthReq {
    string Token = 1;
}

message AuthRsp {
    string PlayerId = 1;
}

message SendToCli {
    option (rpc_option).route_key = "";
    message Req {
        string PlayerID = 1;
        string Content  = 2;
    }
    message Rsp {}
}